--- a/src/app/pages/home/test2/test2.component.html
+++ b/src/app/pages/home/test2/test2.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Home Comp </ion-title>
+    <ion-title> Test 2 </ion-title>
   </ion-toolbar>
   <ion-button>Press me</ion-button>
 </ion-header>
@@ -11,8 +11,8 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-  <!-- <div *ngIf="data2$ | async; let users">
-    <ion-card *ngFor="let user of users; trackBy: trackById">
+  
+    <ion-card *ngFor="let user of data | async; trackBy: trackById">
       <ion-card-header>
         <ion-card-subtitle
           ><ion-avatar> <img src="{{ user.picture.medium }}" /> </ion-avatar>{{
@@ -24,8 +24,5 @@
         <p>{{ user.email }}</p>
       </ion-card-content>
     </ion-card>
-  </div> -->
-
-  <!-- <app-test *ngIf="data$ | async; let d" [data]="d"></app-test> -->
-  <app-test2 [data]="data2$"></app-test2>
+  
 </ion-content>
