added custom form controls for doctor picket and start-end time selectors

--- a/src/app/pages/log-work/log-work.component.html
+++ b/src/app/pages/log-work/log-work.component.html
@@ -1,3 +1,7 @@
-<p>
-  log-work works!
-</p>
+<app-header [title]="'Sinziana'" [backBtnEnabled]="true"></app-header>
+
+<ion-content>
+    <ion-datetime (ionChange)="selectDate($event)"></ion-datetime>
+
+    <!-- <app-form></app-form> -->
+</ion-content>
