--- a/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
+++ b/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
@@ -1,14 +1,9 @@
 <ion-input
     readonly
-    name="dynamicFormControl.key"
     [value]="displayDate"
     (click)="openModal()"
+    label=""
+    labelPlacement="floating"
 >
+    {{ label }}
 </ion-input>
-<!-- <ion-icon
-    [ngClass]="
-        dynamicFormControl.disabled
-            ? 'icon-Datepicker disabled-class'
-            : 'icon-Datepicker'
-    "
-></ion-icon> -->
