--- a/src/app/pages/log-work/form/form-modal/form-modal.component.scss
+++ b/src/app/pages/log-work/form/form-modal/form-modal.component.scss
@@ -8,6 +8,11 @@
                     width: 100%;
                 }
 
+                app-date-picker {
+                    width: 100%;
+                    height: 44px;
+                }
+
                 ion-item {
                     border-radius: 8px;
                     border: solid 2px;
