--- a/src/global.scss
+++ b/src/global.scss
@@ -34,6 +34,11 @@ ion-modal {
     --border-radius: 16px;
     --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
         0 4px 6px -4px rgb(0 0 0 / 0.1);
+
+    // .modal-wrapper {
+    //     height: 70%;
+    //     width: 60%;
+    // }
 }
 
 ion-modal::part(backdrop) {
@@ -61,7 +66,7 @@ swiper-container {
         var(--ion-text-color-rgb, 0, 0, 0),
         0.5
     );
-    min-height: 100%;
+    // min-height: 100%;
 }
 
 swiper-slide {
