--- a/src/app/pages/playground/playground.page.html
+++ b/src/app/pages/playground/playground.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> Home Comp </ion-title>
-  </ion-toolbar>
-  <ion-button>Press me</ion-button>
+    <ion-toolbar>
+        <ion-title> Home Comp </ion-title>
+    </ion-toolbar>
+    <ion-button>Press me</ion-button>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <!-- <div *ngIf="data2$ | async; let users">
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Blank</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <!-- <div *ngIf="data2$ | async; let users">
     <ion-card *ngFor="let user of users; trackBy: trackById">
       <ion-card-header>
         <ion-card-subtitle
@@ -26,6 +26,29 @@
     </ion-card>
   </div> -->
 
-  <!-- <app-test *ngIf="data$ | async; let d" [data]="d"></app-test> -->
-  <app-test2 [data]="data2$"></app-test2>
+    <!-- <app-test *ngIf="data$ | async; let d" [data]="d"></app-test> -->
+    <!-- <app-test2 [data]="data2$"></app-test2> -->
+    <input
+        #imageInput
+        type="file"
+        accept="image/*"
+        (change)="selectFile($event)"
+    />
+    <div>
+        <img
+            id="image"
+            src="https://upcoimages.s3-eu-west-1.amazonaws.com/images/product-image/avoca.png"
+            #cropperContainer
+        />
+    </div>
+
+    <div>
+        <img
+            crossorigin
+            #image
+            src="https://upcoimages.s3-eu-west-1.amazonaws.com/images/product-image/avoca.png"
+        />
+    </div>
+
+    <img [src]="imageDestination" />
 </ion-content>
