--- a/src/global.scss
+++ b/src/global.scss
@@ -66,7 +66,7 @@ swiper-container {
         var(--ion-text-color-rgb, 0, 0, 0),
         0.5
     );
-    // min-height: 100%;
+    min-height: 80%;
 }
 
 swiper-slide {
