--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,28 +1,22 @@
 <app-header [title]="'Sinziana'"></app-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
-  <ion-list>
-    <ion-card color="primary" (click)="openLogWork()">
-        <ion-card-header>
-          <ion-card-title>Log Work</ion-card-title>
-          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-        </ion-card-header>
-      
-        <!-- <ion-card-content>
+    <ion-list>
+        <ion-card color="primary" (click)="openLogWork()">
+            <ion-card-header>
+                <ion-card-title>Log Work</ion-card-title>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+            </ion-card-header>
+
+            <!-- <ion-card-content>
           Log Work
         </ion-card-content> -->
-      </ion-card>
-      
-      <ion-card color="secondary">
-        <ion-card-header>
-          <ion-card-title>Medic: Popescu</ion-card-title>
-          <ion-card-subtitle>Pacient: Mirela</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content>
-          Tip lucrare: Consultatie
-          Nr Lucrari: 14
-        </ion-card-content>
-      </ion-card>
-  </ion-list>
+        </ion-card>
+
+        <ion-card color="secondary" (click)="openSetup()">
+            <ion-card-header>
+                <ion-card-title>Setup</ion-card-title>
+            </ion-card-header>
+        </ion-card>
+    </ion-list>
 </ion-content>
