completed setup module

--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
@@ -1,11 +1,12 @@
 <ion-input
   [readonly]="true"
   (click)="onOpenSelect()"
-  label="Medic"
+  [label]="inputLabel[strategy]"
   labelPlacement="floating"
   readonly
   [ngModel]="selectedValue"
 ></ion-input>
+<div>Strat: {{ inputLabel[strategy]  }} </div>
 <!-- <ng-container item-right
   ><ion-icon
 	name="chevron-down-outline"
