--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -12,6 +12,7 @@
                         <app-search-select-input
                             formControlName="doctor"
                             [form]="dgc.doctorFormGroup"
+                            [strategy]="strategy"
                             (itemSelected)="onDoctorSelected($event, i)"
                         ></app-search-select-input>
                     </ion-item>
