--- a/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.scss
+++ b/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.scss
@@ -13,5 +13,16 @@
     }
     ion-content {
         --background: transparent;
+
+        ion-card {
+            width: 90%;
+        }
+
+        ion-item-options {
+            border-radius: 10px;
+            ion-item-option {
+                border-radius: 10px;
+            }
+        }
     }
 }
