playground work and some styling fixes

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
@@ -6,7 +6,7 @@
         ion-item-group {
             :first-of-type {
                 max-height: 50vh;
-                overflow: scroll; // gsb needs revision
+                overflow-y: auto;
             }
             ion-grid {
                 ion-row {
