--- a/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
+++ b/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
@@ -20,7 +20,8 @@
     }
     ion-footer {
         position: fixed;
-        bottom: 31px;
+        bottom: 106px;
+        left: 23px;
         width: 100%;
         justify-content: center;
 
