--- a/src/app/pages/playground/playground.page.html
+++ b/src/app/pages/playground/playground.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
         <ion-title> Home Comp </ion-title>
     </ion-toolbar>
-    <ion-button>Press me</ion-button>
+    <!-- <ion-button>Press me</ion-button> -->
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -13,6 +13,15 @@
     </ion-header>
 
     <!-- <app-test *ngIf="data$ | async; let d" [data]="d"></app-test> -->
-    <app-test2 [data]="data2$"></app-test2>
- 
+    <!-- <app-test2 [data]="data2$"></app-test2> -->
+
+    <ng-container *ngIf="users$ | async; let users">
+        <app-test3
+            *ngFor="let user of users"
+            [user]="user"
+            (editUser)="editUser($event)"
+            (deleteUser)="deleteUser($event)"
+            (goToUser)="loadChild($event)"
+        ></app-test3>
+    </ng-container>
 </ion-content>
