--- a/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.html
+++ b/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.html
@@ -28,8 +28,9 @@
             appThrottleButtonDirective
             (click)="onSubmit()"
             throttleTime="2000"
+            [disabled]="!doctorForm.valid"
         >
-            <ion-icon class="icon-Save"></ion-icon>
+            <ion-icon name="checkmark-outline"></ion-icon>
         </ion-fab-button>
     </ion-fab>
 </ion-footer>
