--- a/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
+++ b/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
@@ -20,7 +20,8 @@
     }
     ion-footer {
         position: fixed;
-        bottom: 31px;
+        bottom: 106px;
+        left: 23px;
         width: 100%;
         justify-content: center;
 
