fixed throttle directive and added general app padding

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header [title]="'Sinziana'"></app-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content [fullscreen]="true" class="app-inner-padding">
     <ion-list>
         <ion-card color="primary" (click)="openLogWork()">
             <ion-card-header>
