--- a/src/app/pages/log-work/log-work.component.html
+++ b/src/app/pages/log-work/log-work.component.html
@@ -1,5 +1,5 @@
 <app-header [title]="'Sinziana'" [backBtnEnabled]="true"></app-header>
 
-<ion-content>
+<ion-content class="app-inner-padding">
     <ion-datetime (ionChange)="selectDate($event)"></ion-datetime>
 </ion-content>
