--- a/src/app/pages/setup/setup.component.html
+++ b/src/app/pages/setup/setup.component.html
@@ -1,6 +1,6 @@
 <app-header [title]="'Setup'" [backBtnEnabled]="true"></app-header>
 
-<ion-content>
+<ion-content class="app-inner-padding">
     <ion-card (click)="goToDoctorsList()">
         <ion-card-header>
             <ion-card-title>Doctors</ion-card-title>
