--- a/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.html
+++ b/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.html
@@ -1,28 +1,13 @@
 <app-header [title]="'Setup Doctor'" [backBtnEnabled]="true"></app-header>
 
-<ion-content>
-    <ion-list lines="none">
-        <ion-item-sliding *ngFor="let doctor of doctors$ | async">
-            <ion-item>
-                <ion-card (click)="editDoctor(doctor)">
-                    <ion-card-header>
-                        <ion-card-title>{{ doctor.name }} </ion-card-title>
-                    </ion-card-header>
-                    <ion-card-content>
-                        <ion-item lines="none">
-                            <ion-label>{{ doctor.phone }}</ion-label>
-                        </ion-item>
-                    </ion-card-content>
-                </ion-card>
-            </ion-item>
-
-            <ion-item-options>
-                <ion-item-option color="danger" (click)="deleteDoctor(doctor)"
-                    >Delete</ion-item-option
-                >
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
+<ion-content class="app-inner-padding">
+    <ng-container *ngFor="let doctor of doctors$ | async">
+        <app-item-sliding-card
+            [itemSlidingProps]="doctor"
+            (itemSlidingDelete)="deleteDoctor($event)"
+            (itemSlidingEdit)="editDoctor($event)"
+        ></app-item-sliding-card>
+    </ng-container>
 
     <ion-fab horizontal="end" vertical="bottom" slot="fixed" class="ion-margin">
         <ion-fab-button (click)="addDoctor()">
