--- a/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
+++ b/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
@@ -11,11 +11,14 @@
         height: 10vh;
         border-radius: 0 0 30px 30px;
     }
-    form {
-        padding-bottom: 70px;
+    ion-content {
+        overflow-y: auto;
+        form {
+            padding-bottom: 70px;
 
-        ion-grid {
-            padding: 0;
+            ion-grid {
+                padding: 0;
+            }
         }
     }
     ion-footer {
