--- a/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.html
+++ b/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.html
@@ -1,33 +1,13 @@
 <app-header [title]="'Setup Work Items'" [backBtnEnabled]="true"></app-header>
 
-<ion-content>
-    <ion-list lines="none">
-        <ion-item-sliding *ngFor="let workItem of workItems$ | async">
-            <ion-item>
-                <ion-card (click)="editWorkItem(workItem)">
-                    <ion-card-header>
-                        <ion-card-title>{{ workItem.name }} </ion-card-title>
-                    </ion-card-header>
-                    <ion-card-content>
-                        <ion-item lines="none">
-                            <ion-label>{{ workItem.price }}</ion-label>
-                        </ion-item>
-                        <ion-item lines="none">
-                            <ion-label>{{ workItem.description }}</ion-label>
-                        </ion-item>
-                    </ion-card-content>
-                </ion-card>
-            </ion-item>
-
-            <ion-item-options>
-                <ion-item-option
-                    color="danger"
-                    (click)="deleteWorkItem(workItem)"
-                    >Delete</ion-item-option
-                >
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
+<ion-content class="app-inner-padding">
+    <ng-container *ngFor="let workItem of workItems$ | async">
+        <app-item-sliding-card
+            [itemSlidingProps]="workItem"
+            (itemSlidingDelete)="deleteWorkItem($event)"
+            (itemSlidingEdit)="editWorkItem($event)"
+        ></app-item-sliding-card>
+    </ng-container>
 
     <ion-fab horizontal="end" vertical="bottom" slot="fixed" class="ion-margin">
         <ion-fab-button (click)="addWorkItem()">
