--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import './theme/app-inner-padding.scss';
 
 html {
     background-color: var(--ion-color-light-08);
