--- a/src/app/pages/playground/test3/test3-child/test3-child.component.html
+++ b/src/app/pages/playground/test3/test3-child/test3-child.component.html
@@ -1,13 +1,12 @@
-<ion-card *ngIf="user$ | async; let user" (click)="editUser(user)">
+<ion-card *ngIf="user$ | async; let user">
     <ion-card-header>
-        <ion-card-subtitle
-            ><ion-avatar> <img src="{{ user.picture.medium }}" /> </ion-avatar
+        <ion-card-subtitle>
+            <ion-avatar> <img src="{{ user.picture.medium }}" /> </ion-avatar
             >{{ user.name.first }}</ion-card-subtitle
         >
         <ion-card-title>{{ user.name.last }}</ion-card-title>
     </ion-card-header>
-    <ion-card-content>
+    <ion-card-content (click)="editUser(user)">
         <p>{{ user.email }}</p>
     </ion-card-content>
 </ion-card>
-
