--- a/src/app/pages/playground/test3/test3.component.html
+++ b/src/app/pages/playground/test3/test3.component.html
@@ -1,7 +1,7 @@
 <ion-card (click)="loadChild()">
     <ion-card-header>
-        <ion-card-subtitle
-            ><ion-avatar> <img src="{{ user.picture.medium }}" /> </ion-avatar
+        <ion-card-subtitle>
+            <ion-avatar> <img src="{{ user.picture.medium }}" /> </ion-avatar
             >{{ user.name.first }}</ion-card-subtitle
         >
         <ion-card-title>{{ user.name.last }}</ion-card-title>
@@ -10,4 +10,3 @@
         <p>{{ user.email }}</p>
     </ion-card-content>
 </ion-card>
-
